# Fotovariedades_2.0

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  generate_secret_key.py
backend/: .dockerignore  .gitignore  README.md  alembic.ini  create_mock_products.py  create_test_users.py  dockerfile  dockerfile-frontend-fix  main.py  pyproject.toml
backend/.github/: copilot-instructions.md
backend/alembic/: env.py
backend/alembic/versions/: ae5b400a29c7_user_sessions_and_oauth2.py
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  logging.py  security.py  token_service.py
backend/app/database/: __init__.py  session.py
backend/app/models/: __init__.py  orders.py  payments.py  products.py  users.py
backend/app/routers/: __init__.py  auth.py  products.py
backend/app/schemas/: __init__.py  order_schemas.py  payment_schemas.py  product_schemas.py  user_schemas.py
backend/app/services/: __init__.py  auth_service.py  product_service.py
docs/: COMMANDS.md  DATABASE.md  PERMISSIONS.md
frontend/: .dockerignore  README.md  dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts
frontend/app/: layout.tsx
frontend/app/(shop)/: page.tsx
frontend/components/admin/: AdminDashboard.tsx  Navbar.tsx  RecentOrdersTable.tsx  SalesTrendsChart.tsx  Sidebar.tsx  StatsCards.tsx  TopProductsChart.tsx
frontend/components/checkout/: CheckoutPage.tsx  CheckoutPageTitle.tsx  DeliveryForm.tsx  FileUpload.tsx  Footer.tsx  Header.tsx  OrderSummary.tsx  OrderTotalAndPayment.tsx
frontend/components/home/: FeaturedStationery.tsx  Footer.tsx  Header.tsx  Hero.tsx  HomePage.tsx  Services.tsx  Sweets.tsx
frontend/components/layout/: Footer.tsx  Header.tsx  PageContainer.tsx  Sidebar.tsx  index.ts
frontend/components/photography/: CallToAction.tsx  Footer.tsx  Header.tsx  Hero.tsx  PhotographyPage.tsx  Services.tsx
frontend/components/stationery/: Breadcrumbs.tsx  (+8 more)
pgadmin/: pgpass  servers.json
scripts/: iniciar-contenedores.ps1
(+25 files in other folders)
