[project]
name = "backend"
version = "0.1.0"
description = "Backend for the fotovariedades project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pylint>=4.0.4",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
[tool.pylint.main]
ignore-paths = [
    "^.venv/.*$",
    "^venv/.*$",
    "^env/.*$",
    "^__pycache__/.*$",
    "^.pytest_cache/.*$",
    "^build/.*$",
    "^dist/.*$",
    "^uploads/.*$",
]
