[project]
name = "backend"
version = "0.1.0"
description = "Backend for the fotovariedades project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pylint>=4.0.4",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "python-dotenv>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.1.2",
    "pydantic-settings>=2.0.0",
    "pyjwt>=2.10.1",
    "pwdlib[argon2]>=0.3.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
]
[tool.pylint.main]
ignore-paths = [
    "^.venv/.*$",
    "^venv/.*$",
    "^env/.*$",
    "^__pycache__/.*$",
    "^.pytest_cache/.*$",
    "^build/.*$",
    "^dist/.*$",
    "^uploads/.*$",
]
